--- a/src/Fhirbase.Net/Fhirbase.Net/Fhirbase.Net.csproj
+++ b/src/Fhirbase.Net/Fhirbase.Net/Fhirbase.Net.csproj
@@ -60,12 +60,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Api\FHIRbaseApi.cs" />
+    <Compile Include="Api\FhirStorage.cs" />
     <Compile Include="Common\FHIRbase.cs" />
     <Compile Include="Common\PostgresHelper.cs" />
     <Compile Include="Common\FHIRbaseException.cs" />
     <Compile Include="Common\FHIRbaseHelper.cs" />
-    <Compile Include="Api\IFHIRbase.cs" />
+    <Compile Include="Api\IFhirStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\ResourceKey.cs" />
     <Compile Include="SearchHelpers\HistoryParameters.cs" />
