--- a/src/Fhirbase.Net/Fhirbase.Net.Test/App.config
+++ b/src/Fhirbase.Net/Fhirbase.Net.Test/App.config
@@ -3,7 +3,9 @@
   <connectionStrings>
     <add name="FhirbaseConnection" connectionString="Server=192.168.8.98;Port=5432;User Id=fhirbase;Password=FCr0VMHDurLNqJusQSqZ;Database=fhirbase;" />
   </connectionStrings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" /></startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
